Developed crud methods for product

--- a/Logiwa.API/appsettings.json
+++ b/Logiwa.API/appsettings.json
@@ -1,9 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "ConnectionStrings": {
+        "SqlConnectionString": "Server=DESKTOP-1S9FFQP;Database=Logiwa;Trusted_Connection=True;"
+    },
+    "AllowedHosts": "*"
 }
